examples/test/testpolicy12730.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12730
  namespace: namespace284
spec:
  podSelector:
    matchLabels:
      key33: value17
      key2: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value30
          key12: value4
          key41: value23
      podSelector:
        matchLabels:
          key12: value13
